# nous

./: .editorconfig  .gitignore  AGENTS.md  AUDIT.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIMITATIONS.md  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  STATUS.md  alembic.ini  benchmark.py  mkdocs.yml  pyproject.toml  renovate.json5
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
alembic/: README  env.py
alembic/versions/: 0001_baseline.py  0002_dtn_store.py
audit/: 00-inventory.md  01-baseline.md  02-security-findings.md  03-final-report.md
deploy/: Caddyfile.example  README.md  auto-update-rollback.sh  auto-update.sh  cloud-init.yaml  install.sh  logrotate.conf
deploy/systemd/: nous-auto-update.service  nous-auto-update.timer  nous-state-flush.service  nous-state-flush.timer  nous.service
docs/: README.md  architecture.md  assumptions.md  audit-2026-05-23.md  audit-2026-05-24.md  audit-2026-05-27.md  audit-2026-05-27b.md  audit-2026-06-01.md  audit-2026-06-06.md  audit-2026-06-14.md  audit-2026-06-14b.md  audit-2026-06-15.md  audit-2026-06-15b.md  audit-2026-06-16.md  audit-2026-06-23.md  backlog.md  bom.md  contributor-runbook.md  deployment.md  genesis-world.md  hardware-profiles.md  releasing.md  review-2026-05-21.md  state-machine.md  tool-reference.md
docs/adr/: 0000-template.md  0001-fastmcp-and-tiered-policy.md  0002-sqlite-alembic-and-jsonl-audit.md  0003-hardware-profile-yaml.md  0004-hand-rolled-fsm.md  0005-anthropic-client-and-daily-cap.md  0006-internal-vocabularies.md  0007-additive-surface-rule.md  0008-vm-deployment-pattern.md  0009-stpa-pro-as-safety-method.md  0010-self-model-and-estimation-layer.md  0011-interoperability-adapters.md  0012-versioned-schemas.md  0013-tier-classified-subsystems.md  0014-docs-site-mkdocs-pages.md  0015-apu-strictly-auxiliary.md  0016-deployment-baseline-ubuntu-2604.md  0017-public-showcase-site.md  0018-fsm-guards-for-stpa-constraints.md  0019-deterministic-seed-and-clock-seam.md  0020-subsystem-physics-invariants.md  0021-per-subsystem-tool-modules.md  0022-runtime-safety-enforcer.md  0023-audit-cadence-and-regression-suite.md  0024-engine-lifecycle-process-scope.md  0025-tamper-evident-audit-hash-chain.md  0026-daily-audit-anchor.md  0027-condition-driven-auto-safing.md  0028-fsm-reachability-and-label-driven-safing.md  0029-fsm-remediation-actuation-and-robustness.md  0030-fsm-fault-reachability-completeness.md  0031-state-transition-control-tool.md  0032-fsm-terminal-control-tools.md  0033-complete-tool-surface.md  0034-cloud-inference-path.md  0035-enrich-cloud-inference-call.md  0036-tick-loop-observability-otel.md  0037-schema-migration-workflow.md  0038-self-model-situational-awareness.md  0039-engine-start-completes-to-idle.md  (+48 more)
docs/conformance/: biometrics.md  cot-tak.md  dtn-bpv7.md  eoir.md  mosa.md  mqtt.md  nmea-0183.md  ogc-sensorthings.md  sensors.md  sosa.md  stanag-4609-misb-klv.md  stanag-4677-dsss.md  stanag-4774-4778.md
docs/model-cards/: README.md  estimator-apu.md  estimator-biometrics-kalman.md  estimator-comms-particle.md  estimator-compute-kalman.md  estimator-eoir-kalman.md  estimator-position-ekf.md  estimator-position-kalman.md  estimator-power-soc.md  estimator-sensors-kalman.md  estimator-storage-kalman.md  estimator-thermal-kalman.md  inference-local-mock.md  self-model.md  subsystem-apu.md  subsystem-comms.md  subsystem-compute.md  subsystem-eoir.md  subsystem-power.md  subsystem-sensors.md  subsystem-storage.md  subsystem-thermal.md
docs/scenarios/: README.md
docs/security/: bandit-suppressions.md
docs/showcase/: README.md  capability-matrix.md  fidelity.md  state-machine.md
docs/stpa/: 01-purpose.md  02-system-boundary.md  03-losses.md  04-hazards.md  05-safety-constraints.md  06-control-structure.md  07-unsafe-control-actions.md  08-loss-scenarios.md  09-derived-requirements.md  10-fsm-constraints-mapping.md  11-coverage.md  README.md
docs/subsystems/: README.md
examples/: inspector_quickstart.md  self_driving_demo.py
profiles/: jetson-agx-orin.yaml  jetson-orin-nx.yaml  pi5-hailo.yaml  propagation-demo.yaml  spot-core.yaml  terrain-demo.yaml
scenarios/: apu-fuelcell-overnight.yaml  apu-solar-sustained.yaml  c2-degraded-comms.yaml  env-monitoring-urban.yaml  operator-heat-strain.yaml  relay-mountain.yaml  standalone-comms-hub.yaml
scripts/: gen_adr_index.py  gen_backlog_summary.py  gen_mkdocs_adr_nav.py  gen_schemas.py  gen_showcase_telemetry.py  gen_tool_reference.py  migrate.py  policy_checks.sh
skills/: nous-deployment-vm.md  nous-getting-started.md  nous-interop-tak.md  nous-scenario-walkthrough.md  nous-self-model.md  nous-stpa-update.md  nous-troubleshooting.md
src/nous/: __init__.py  __main__.py  anthropic_client.py  anthropic_status.py  audit.py  audit_anchor.py  cli.py  clocks.py  config.py  db.py  engine.py  inference_fallback.py  policy.py  runner.py  server.py  telemetry.py  tick.py  types.py
tests/: conftest.py
tests/e2e/: test_stdio_smoke.py
tests/integration/: test_apu_charges_battery.py  test_audit_anchor_through_server.py  test_auto_update_rollback.py  test_biometrics_through_engine.py  test_canonical_scenarios.py  test_comms_drives_state.py  test_comms_outbox_tools.py  test_comms_tools.py  test_compute_drives_power_and_thermal.py  test_concurrent_anomalies.py  test_dtn_persistence.py  test_emcon_tools.py  test_eoir_through_engine.py  test_eoir_tool.py  test_imu_tool.py  test_inference_cloud_tool.py  test_inference_local_path.py  test_migrations.py  test_persistence_status.py  test_pmu_tools.py  test_position_through_engine.py  test_propagation_demo.py  test_scenario_session_tools.py  test_self_estimator_status_tool.py  test_self_model_publish_tool.py  test_self_model_situation_tool.py  (+10 more)
(+157 files in other folders)
