[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nous"
version = "0.1.0"
description = "Simulator for a man-portable AI inference appliance: tick-loop physics, subsystem estimators, self-model capability layer, MCP tool surface."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "rmednitzer" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "simulator",
    "edge-ai",
    "jetson",
    "kalman-filter",
    "tak",
    "sensorthings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp>=1.27",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "sqlmodel>=0.0.22",
    "alembic>=1.18.4",
    "anthropic>=0.40",
    "numpy>=2.0",
    "filterpy>=1.4.5",
    "pynmea2>=1.19",
    "paho-mqtt>=2.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.6",
    "uvicorn>=0.34",
    "starlette>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    # ruff is pinned to a minor range so contributors and CI agree on
    # the same rule set. Bump together with the lint output the new
    # minor produces.
    "ruff>=0.15,<0.16",
    "mypy>=1.13",
    "hypothesis>=6.115",
    "types-PyYAML>=6.0.12.20260518",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.21.3",
]
prod = [
    "gunicorn>=26.0.0",
]

[project.scripts]
nous = "nous.cli:main"

[project.urls]
Homepage = "https://github.com/rmednitzer/nous"
Source = "https://github.com/rmednitzer/nous"
Issues = "https://github.com/rmednitzer/nous/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nous"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ASYNC", "PIE", "PTH", "BLE"]
ignore = ["B008", "RUF006", "ASYNC109", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "BLE", "PTH"]
"scripts/*" = ["S", "BLE"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["src/nous"]

[[tool.mypy.overrides]]
module = [
    "filterpy.*",
    "pynmea2.*",
    "paho.*",
    "mcp.*",
    "sqlmodel.*",
    "alembic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nous.server"]
disallow_untyped_decorators = false
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
